--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,12 +224,14 @@ a.btn-bar{
 	resize: vertical;
 	padding: 25px 0 0 15px; 
 }
-.page-contact .form-contact .send-message a{
+.page-contact .form-contact .send-message button{
 	display: block;
-	text-decoration: none;
     font-weight: bold;
     margin-top: 25px;
     font-size: 19px;
+	border: none;
+	cursor: pointer;
+	padding: 15px;
 }
 
 .custom-wrapper {
@@ -300,6 +302,21 @@ a.btn-bar{
 
 .gallery-photos{
 	overflow: hidden;
+}
+/* Transicion para vue */
+.slide-fade-enter-active {
+	transition: all 0.4s ease;
+}
+
+.slide-fade-leave-active {
+	transition: all .4s cubic-bezier(.17, .67, .83, .67);
+}
+
+.slide-fade-enter-from,
+.slide-fade-leave-to {
+	transform: translateY(800px) .2s;
+	opacity: 0;
+
 }
 
 
